--- a/MealPicker.UI/Pages/FetchData.razor
+++ b/MealPicker.UI/Pages/FetchData.razor
@@ -1,11 +1,10 @@
-﻿@page "/fetchdata"
+@page "/fetchdata"
+@inject HttpClient Http
 
-@using MealPicker.UI.Data
-@inject WeatherForecastService ForecastService
-
+<Counter/>
 <h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from a service.</p>
+<p>This component demonstrates fetching data from the server.</p>
 
 @if (forecasts == null)
 {
@@ -41,6 +40,17 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+    }
+
+    public class WeatherForecast
+    {
+        public DateTime Date { get; set; }
+
+        public int TemperatureC { get; set; }
+
+        public string Summary { get; set; }
+
+        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
     }
 }
