--- a/MealPicker.UI/_Imports.razor
+++ b/MealPicker.UI/_Imports.razor
@@ -1,9 +1,11 @@
 ﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MealPicker.UI
 @using MealPicker.UI.Shared
+@using DevExpress.Blazor
+@using MealPicker.UI.Components.ViewMeals
